--- a/css/style.css
+++ b/css/style.css
@@ -407,10 +407,11 @@ img {
 
 /* SEARCH */
 .search-popup {
-  width: 242px;
+  width: 311px;
 }
 .search-popup input[type="search"] {
-  width: 100%;
+  width: 312px;
+  box-sizing: border-box;
 }
 /* LOGIN */
 .login-popup {
@@ -763,6 +764,7 @@ img {
 
 .footer-nav-col {
   display: inline-block;
+  vertical-align: top;
 }
 
 .footer-nav a {
@@ -786,7 +788,7 @@ img {
   margin-top: 21px;
   padding-top: 38px;
   text-align: left;
-  background: url("../img/main_sprite.svg") no-repeat 0 -533px;
+  background: url("../img/main_sprite.svg") no-repeat 0 -622px;
 }
 
 /* = = = = = = = = = = = = =  INDEX PAGE STYLES = = = = = = = = = = = = = = = */
@@ -1104,8 +1106,14 @@ body > input[type="radio"] {
 .index-contact-info {
   width: 100%;
   height: 430px;
-  /*без задания высоты почему-то добавляет 6px внизу карты*/
+/*  без задания высоты почему-то добавляет 6px внизу карты*/
   background: #F4F2ED url('../img/map.jpg') no-repeat 50% 0;
+}
+
+.index-contact-info iframe {
+  width: 100%;
+  height: 430px;
+  border: 0;
 }
 
 .contact-box {
@@ -1493,32 +1501,82 @@ body > input[type="radio"] {
   left: 15px;
 }
 
-.sorting select {
+.catalog-filter .sorting {
+  padding: 0;
+  height: 36px;
+}
+
+.outer-select {
+  position: relative;
+  width: 194px;
+  overflow: hidden;
+}
+
+.sort-product {
+  position: relative;
   font-size: 16px;
-  min-width: 164px;
+  width: 220px;
+  padding-top: 7px;
+  padding-bottom: 8px;
+  padding-left: 16px;
   cursor: pointer;
   color: #FFFFFF;
   border: none;
-  background: url("../img/main_sprite.svg") 145px -483px no-repeat;
+  background-color: transparent;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
   outline: none;
+  z-index: 60;
 }
 
-.sorting:hover {
+.outer-select::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  border-radius: 0 19px 19px 0;
+  width: 30px;
+  height: 36px;
+  background: #9DB1A6 url("../img/main_sprite.svg") -4px -510px no-repeat;
+  z-index: 50;
+}
+
+/*При ховере цвет текста в селекте должен стать черным, а фон белым.
+Но, например, в firefox'е и всплывающий блок с option'ами
+окрашивается там. Он там по умолчанию (по крайней мере на mac)
+белого цвета и темный цвет текста option'ов видно только при ховере,
+а если убрать, то белый цвет текста сливается с белым фоном:
+https://monosnap.com/file/M7wgaKYQ0zBB8I0ewczXQf9qmtMvja
+Решил с помощью :focus*/
+.sorting:hover,
+.sorting:hover .outer-select::after {
   background-color: #ffffff;
 }
 
-.sorting:hover select {
+.sorting:hover .sort-product {
   color: #343434;
-  background-position: 142px -504px;
+}
+
+.sorting:hover .outer-select::after  {
+  background-position: -4px -560px;
+}
+
+/*:focus решает проблему с курсором вне select'а, но
+после выбора опции - селект горит темным цветом:
+https://monosnap.com/file/TIPetH18zTeJw1D7vHH5z7dz0lyV4N
+Если фокус на что-ть другое перевести, или в любом другом месте
+кликнуть - все становится ок.*/
+.sort-product:focus {
+  color: #343434;
 }
 
 .range-filter {
   position: relative;
   margin-top: 23px;
   margin-right: 15px;
+  margin-bottom: 17px;
   float: left;
   width: 220px;
   height: 36px;
